# tick

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  SPEC.md  tick.db
.config/: nextest.toml
.github/workflows/: rust.yml
.sqlx/: query-00c1a1cb635462a3c7a5e58fc16b8b7a5c0c131785e8bb1e62ef7b672a66d71b.json  query-04f93f18bcc61fc4a94439e5fdaeaf4c6e36ade71f3a141c250fc37b04949362.json  query-0a1bb3b68393a6135c085735326240f8934b00b3197d99474fd4786f55eb23a3.json  query-0cb00a03c4f6ae44a90d10b8f69f4e806266d11713d9897696b031933251e125.json  query-0eaba4a05b4c5cb85f7a67b028f64ee756db2b15a17bab81d479b8cc639f109e.json  query-1ff928ef59869c64b3cab96d87798a81808855f21680180e82608fb695cd9ecd.json  query-245fb04ae66c289fbbfc5b7f55047c0406773e172fffa4a38a0aae905c3eed65.json  query-2a16324f3dbc7c5d0cb2c604ea9e163a6986238f07dd15322a3292f3ff4ebeec.json  query-3147188db5193c07bf8f0e36b8a9be875cbe58650cb9def23c5fa027ed9aa84e.json  query-3fcaf5a673878d3bfba4ff0948495fb1e2b555d35add476b308d48b269730c88.json  query-45cdf6031c0f203f5ed7c5eb794dd30728677417bc284902e1b098bb79bb1bc8.json  query-515c2ab17803d263a2f922757e839d488fd85d8052e22966a09cb83a7ec6bd5d.json  query-534e2d5d4df40f70150bee155efe0f21945fe57333fd27c834a1beb41c698b72.json  query-535c8d558751dcc46365c9a97e29668e23b6d7aefe4c27d203aedd89dfc650c8.json  query-55c0978caa8ec9cd37808735408d57d5dc0fb8982041f9635509f9c35302a1db.json  query-585df799417c681f123ca84e624c1fca2fe98a8651363d81c8c057867b789826.json  query-5d08892ba54743670f6f6993c93b2716715e03654718f13117d09878389d77b6.json  query-6063edda260737e6942c1f14ffa0a9c515de83750f90c1ac03ed7c7afe7bc186.json  query-61e98a53cea3da87cb4a229678fc5e044ebba12d49c03ed5a56b85c88d1e9a63.json  query-699d6fa5933a965d23ecbe9f505139ed7aeb53c4b25d9168752efbcacb9107ad.json  query-721e8ca7b15209d3ba09f10db87b1680f354003f23b802b5feea8e67b666509e.json  query-72bdeed4769ac136b7a1409bb40e3ab169804ca3af1d1c7f0173837c8eb8cc60.json  query-745ee98cd35dad4783a43d9351ee5631770295a424b4997fb28d2398a34e3c51.json  query-873b5dfcdde387cfa2e4f9aa89e170a00f25d490ba38e11215e2e465b1c1f255.json  query-90d13f874a9c6d2e866b694fb51888a1380a411545209258f16a7d483c1532bf.json  query-930417aa4c6abe23f05f909a4df0ea0d5ef5f7d662e9976cc357aedaac613497.json  query-9573fa92dfd5c762ad308f4354307d2cd7072caebab40ef93fe67564f4b4394a.json  query-a0ae135f77b52bfd0bd3190efdebac1d648964fde4035015528a2d62ff6ed519.json  query-a29eccacb591e615cd8afad2d39a2261b971b45ba463a6e4ad3e7370ed9d528e.json  query-aceba5a003a31057638b641dd499d05b980aa414d6b443382c8b373fd4b33481.json  query-af5f6a356b0737a11cf335a95c45a0abe0d5f8f618bd5d882477049efcfd6566.json  query-b3cda6348070ddea3f6ccb874f59871d3cbde84536ee325f378f886d7f32fd29.json  query-b4c82ed09c8e8b421be1dd6a7b08cc6a0cf7644ba51f6ce2b4c2aedcc24b6719.json  query-b5f8c5024accf80bba3cce573850c36c3fe7c17d51085133c09e215fc574e9f1.json  query-b6d33610d76f8cb1baac98f3d10f74a5fde780d92e9cea64abdb2d4fb50fac88.json  query-bae00bc7cf4c88bf0125e584565190fef9d9a19c2e54c4943a9466fbd0d364b0.json  query-bd59459c3b7acf9f6fc0dd019b7584a01a5cbcce58ec88c402d2076997cb6f1f.json  query-c57d028bea67625cae7fb324f1014fbf10497cee88e805a177db200a862b83ce.json  query-d2e6cbe330fbf25444cc94d028a98c96452512979595526430034608af2035b6.json  query-db7684bf0d469d45c65eec07daa2d3ff5d118db789cb796b6b9c35c19f7dc034.json  (+9 more)
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config.rs  context.rs  error.rs  github.rs  guard.rs  lib.rs  main.rs  types.rs
crates/cli/src/handler/: mod.rs  project.rs  report.rs  task.rs
crates/cli/tests/: common.rs  config.rs  guard.rs  project.rs  report.rs  task.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  repository.rs
crates/core/src/domain/: mod.rs  task.rs
crates/core/src/service/: mod.rs  report.rs  task.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial.sql  20260308000000_initial.sql  20260322000000_add_indexes.sql  20260405000000_add_github_and_pull_request.sql  20260418000000_add_branch_name.sql
crates/db/src/: lib.rs  schema.rs  sqlite.rs
crates/db/tests/: project.rs  task.rs
crates/db/tests/common/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  repository.rs
crates/domain/src/model/: id.rs  mod.rs  project.rs  status.rs  task.rs
crates/domain/src/service/: mod.rs  project.rs  report.rs  task.rs
crates/domain/tests/: fake.rs  project.rs  report.rs  service.rs  status.rs  task.rs
crates/domain/tests/common/: fake.rs  mod.rs
