[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }

chrono = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }