[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }

arboard = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }