[package]
name = "db"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }

chrono = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
