[package]
name = "db"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }

chrono = { workspace = true }
dirs = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
